--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 <div class="justify-content-center">
   <h3 class=" text-center fw-bold">Browse categories</h3>
   <p class="text-end" style="flex:1;margin-right:76px;cursor: pointer;">
-    <a href="#">See all</a>
+    <a [routerLink]="['/product']" routerLinkActive="router-link-active" >See all</a>
   </p>
 </div>
 <div class="lines">
